[gd_scene load_steps=7 format=3 uid="uid://clu8aephonmvo"]

[ext_resource type="Script" path="res://scenes/Main/HUD.gd" id="1_w0g27"]
[ext_resource type="FontFile" uid="uid://c6t2r4co1nftq" path="res://assets/fonts/OpenSans-VariableFont_wdth,wght.ttf" id="2_rjx7w"]
[ext_resource type="Texture2D" uid="uid://dai080a7xrehu" path="res://assets/hud/health-bar.png" id="3_4w1d6"]
[ext_resource type="Script" path="res://scenes/Main/HealthBar.gd" id="4_exui5"]

[sub_resource type="Animation" id="Animation_5x5hd"]
resource_name = "damage_screen"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageOverlayAnimation/DamageScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.988235, 0.0941176, 0.0627451, 0), Color(0.988235, 0.0941176, 0.0627451, 0.584314), Color(0.988235, 0.0941176, 0.0627451, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1jxnq"]
_data = {
"damage_screen": SubResource("Animation_5x5hd")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_w0g27")

[node name="DamageOverlayAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1jxnq")
}

[node name="DamageScreen" type="ColorRect" parent="DamageOverlayAnimation"]
offset_right = 1919.0
offset_bottom = 1086.0
size_flags_horizontal = 4
color = Color(0.988235, 0.0941176, 0.0627451, 0)

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_right = 93.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_rjx7w")
theme_override_font_sizes/font_size = 146
text = "0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -71.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_rjx7w")
theme_override_font_sizes/font_size = 103
text = "INTERIM ABYSS"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -199.5
offset_top = -188.0
offset_right = 199.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 131
text = "START"

[node name="MessageTimer" type="Timer" parent="."]

[node name="HealthBar" type="Sprite2D" parent="."]
position = Vector2(1834, 54)
scale = Vector2(0.189433, 0.181416)
texture = ExtResource("3_4w1d6")
script = ExtResource("4_exui5")
metadata/_edit_group_ = true

[node name="Value" type="ColorRect" parent="HealthBar"]
offset_left = -261.697
offset_top = -100.585
offset_right = 264.983
offset_bottom = 120.17
color = Color(1, 0, 0, 1)

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
